--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "frontend"
+    }
+  },
+  "defaultProject": "frontend",
+  "cli": {
+    "analytics": "50273b00-0343-44f3-bf10-28efd71c91bb"
+  }
 }
